styles/stylesheet.css
* {
    font-family: sans-serif;
    background-color: #f1f3f4;
}

a {
    text-decoration: none;
}

h1 {
    text-align: center;
}

p {
    font-size: 105%;
    line-height: 150%;
}

.about img {
    width: 25%;
    min-width: 200px;
    height: auto;
    float: right;
    padding-bottom: 10px;
    padding-left: 10px;
    border-radius: 50%;
}

.about div,
.post div {
    max-width: 50em;
    margin: auto;
}

.home-links {
    text-align: center;
}

.home-page{
    text-decoration: none;
    font-size: 20px;
}

.home-page .home-links li {
    list-style-type: none;
    font-size: 36pt;
    width: 100%;
    height: 100%;
    float: none;
}

.home-page .home-links li a {
    display: block;
    color: #212628;
    background-color: transparent;
}

.home-links li {
    display: inline;
}

.home-links li a {
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    color: white;
    background-color: #212628;
    opacity: .7;
}

a {
    color: #006687;
    text-decoration: underline;
}

.post-list a {
    text-decoration: none;
}

p {
    color: #323739;
}

.home-links,
.post-list,
.project-list {
    list-style-type: none;
}

.post-list li,
.project-list li {
    margin: 15px;
    text-align: center;
}

ul {
    padding-top: 1px;
    font-size: 105%;
    line-height: 150%;
}

code {
    font-family: monospace, monospace;
    font-size: 1em;
    font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
    padding: 0.2em 0.4em;
    margin: 0;
    font-size: 85%;
    background-color: rgba(27,31,35,0.05);
    border-radius: 3px;
}

